<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">双色球定制</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_input">请输入你的号码</string>
    
    <string name="btn_main_genNum">来一注</string>
    <string name="tv_main_title">主页</string>
    <string name="btn_main_titleRight">设置</string>
    <string name="tv_input_title">输入号码</string>
    <string name="btn_input_titleRight">确定</string>
    
    <string name="tv_input_description">这里输入入的号码作为初始的号码，然后我会以此号码为依据来随机生成一注双色球号，生成的号的数字全是由你输入的号产生，比如我输入我的手机号\r\n15801672886\r\n（虚构的）随机生成的订单像这样的\r\n12 18 22 01 06 20 + 02\r\n17 20 27 16 06 11 + 01\r\n 等等，反正就是生成号肯定是由你输入的号组成的，别用奇葩号哦,比如100000，你丫让我怎么生成一注出来\r\n如果您想随机到所有的数，此处输入0123456789就可以了\r\n生成规则，请点击主页左上角的规则查看</string>
    <string name="toast_input_wrongRedNum">让你丫别输入奇葩号的，你自己给组装一注出来看看~</string>
    <string name="btn_main_titleLeft">规则</string>
    <string name="btn_title_back">返回</string>
    <string name="tv_introduce_title">生成规则</string>
    <string name="tv_introduce_description">申明此应用的每一注，完全使用随机数生成，不含人为干预，关于号码的生成规则是这样的，首先将你输入的元数据拆分开来比如 号码\r\n15801672886\r\n得到的数字是\r\n0 1 2 5 6 7 8\r\n然后将这些数据进行组装得到两个池，红球池和蓝球池，比如红球池为：\r\n01 02 05 06 07 08 10 11 12 15 16 17 18 20 21 22 25 26 27 28\r\n而蓝球池为\r\n01 02 05 06 07 08 10 11 12 15 16\r\n然后随机生成一个数，将这个数除以红球池的大小的余数对应的位置上的那个号码为第一个选出的号码，然后在红球池中移除刚选中的号码，避免重复选中，同时也是为了跟摇奖的规则一样，摇出去的自然不在池子里面 ，这样一直产生出所有的红球，蓝球产生规则跟红球一样。不要觉得就那么几个数，是不是范围没法覆盖，刚举例的才7个数，但是已经覆盖20/33的红球和11/16的蓝球，买双色球，就图个开心而已，规律这东西我不信，您说呢~</string>
    <string name="tv_introduce_tks">初版软件，难免有不足之处，多多包含，如有任何建议，随时联系我，谢谢，顺便说一下，我有想过直接通过生成的号传递到支付宝购买彩票，但是目前支付宝没有开通此API，我在持续关注中，如果那边开放了，我会加入此功能。</string>
    <string name="tv_splash_title">检测状态</string>
    <string name="tv_main_function">手机号，QQ号，身份证号，只要是号，欧巴就根据你输入的这个号按照双色球的规则随机生成一注，详情请点击右上角的设置，看详细说明以及欧巴的例子</string>

</resources>
