<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:titleView="http://schemas.android.com/apk/res/com.zig.lottery.ssq"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.zig.lottery.ssq.ui.widgets.TitleView
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        titleView:text_leftBtn="@string/btn_title_back"
        titleView:text="@string/tv_input_title"
        titleView:text_rightBtn="@string/btn_input_titleRight" />
    <RelativeLayout 
        android:id="@+id/layout_adv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_title"
        android:layout_above="@id/layout_adv"
        android:orientation="vertical"
        android:padding="15dp" >

        <EditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input"
            android:inputType="number"
            android:singleLine="true" />

        <TextView       
            android:id="@+id/tv_input"   
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:text="@string/tv_input_description"
            />
    </LinearLayout>

</RelativeLayout>